07_retirement/grade.txt
Grading at Tue May 26 13:32:08 UTC 2020
Attempting to compile retirement.c
retirement.c: In function ‘retirement’:
retirement.c:24:20: error: ‘retire_info {aka struct _retire_info}’ has no member named ‘month’
   while(i < working.month );
                    ^
retirement.c:27:73: error: ‘retire_info {aka struct _retire_info}’ has no member named ‘month’
      printf("Age %3d month %2d you have $%.2f\n",(w + startAge + working.month)/12, (w + startAge + working.month)%12, initial);
                                                                         ^
retirement.c:27:108: error: ‘retire_info {aka struct _retire_info}’ has no member named ‘month’
      printf("Age %3d month %2d you have $%.2f\n",(w + startAge + working.month)/12, (w + startAge + working.month)%12, initial);
                                                                                                            ^
retirement.c:32:20: error: ‘retire_info {aka struct _retire_info}’ has no member named ‘month’
   while(w < retired.month);
                    ^
retirement.c: In function ‘main’:
retirement.c:39:10: error: ‘retire_info {aka struct _retire_info}’ has no member named ‘month’
   working.month = 489;
          ^
retirement.c:43:10: error: ‘retire_info {aka struct _retire_info}’ has no member named ‘month’
   retired.month = 384;
          ^
The code did not compile!

Overall Grade: F
